<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">JadeBusemApp</string>
    <string name="details">Schedule Details</string>
    <string name="new_schedule">Add New Schedule</string>
    <string name="action_search">Search Schedule</string>
    <string name="search_schedules">Search Schedules</string>
    <string name="add_schedule_dates">Schedule Dates</string>
    <string name="set_time">Set Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="delete_title">"Delete Time"</string>
    <string name="delete_title_trace_point">"Delete Trace Point"</string>
    <string name="detailsNameOfSchedule">Name of the schedule</string>
    <string name="detailsRoute">Route:</string>
    <string name="detailsMonday">Monday:</string>
    <string name="detailsTuesday">Tuesday:</string>
    <string name="detailsWednesday">Wednesday:</string>
    <string name="detailsThursday">Thursday:</string>
    <string name="detailsFriday">Friday:</string>
    <string name="detailsSaturday">Saturday:</string>
    <string name="detailsSunday">Sunday:</string>
    <string name="detailsModifySchedule">Modify schedule</string>
    <string name="detailsDeleteSchedule">Delete schedule</string>
    <string name="modify_schedule">Modify Schedule</string>
    <string name="delete_alert_dialog_title">Confirmation</string>
    <string name="delete_alert_dialog_content">Are you sure you want to delete this schedule?</string>
    <string name="delete_alert_dialog_positive">Yes, delete it</string>
    <string name="delete_alert_dialog_negative">Cancel</string>
    <string name="search_alert_dialog_title">Wrong query</string>
    <string name="search_alert_dialog_content">You have to type keywords separated by space</string>
    <string name="search_alert_dialog_positive">OK</string>
    <string name="search_activity_main_text">Your schedules:</string>
    <string name="main_activity_main_text">Your schedules:</string>
    <string name="main_activity_add_button_text">Add new schedule</string>
    <string name="url_rest_all_schedules">http://jadebusem1.herokuapp.com/schedules/all_schedules/</string>
    <string name="action_fetch_more_schedules_title">Fetch more schedules</string>
    <string name="deny_modify_or_delete_remote_schedule_dialog_title">Deny</string>
    <string name="deny_modify_or_delete_remote_schedule_dialog_message">You cannot modify or delete remote schedule
    </string>
    <string name="deny_modify_or_delete_remote_schedule_dialog_positive_button">OK</string>
    <string name="action_synchronize_schedule_title">Synchronize</string>
    <string name="deny_synchronize_schedule_title">Offline mode</string>
    <string name="deny_synchronize_schedule_message">You can synchronize only when you are online and logged in</string>
    <string name="deny_synchronize_schedule_positive_button">OK</string>
    <string name="url_rest_new_schedule">http://jadebusem1.herokuapp.com/schedules/new_schedule/</string>
    <string name="success_synchronize_dialog_title">Success</string>
    <string name="success_synchronize_dialog_message">You have successfully synchronized schedule</string>
    <string name="success_synchronize_dialog_positive_button">OK</string>
    <string name="error_connection_dialog_title">Error</string>
    <string name="error_connection_dialog_message">Check your connection (or server may be down)</string>
    <string name="error_connection_dialog_positive_button">OK</string>
    <string name="query_hint">Keywords separated by space</string>
    <string name="action_refresh_title">Refresh</string>
</resources>
